# core-engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CoreEngine.sln  LICENSE  README.md  Readme.txt
Core/: Core.vcxproj  Core.vcxproj.filters
Core/Dependencies/bc7enc/lib/: bc7enc.lib
Core/Dependencies/glad/src/: gles1.c  glx.c
Core/Dependencies/imgui/: imgui_impl_opengl3.cpp  imgui_impl_sdl2.cpp
Core/Source/: config.h  main.cpp
Core/Source/Assets/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderTexture.cpp  RenderTexture.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Core/Source/Classes/: TextureUtils.cpp  bc7compressor.cpp  bc7compressor.h  imgui_impl_sdl2.cpp
Core/Source/Components/: Camera.cpp  Camera.h  Component.cpp  Component.h  ComponentList.h  MeshRenderer.cpp  MeshRenderer.h  Transform.cpp  Transform.h
Core/Source/Core/Assets/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  Material.cpp  Mesh.cpp  Mesh.h  RenderTexture.cpp  RenderTexture.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Core/Source/Core/Classes/: TextureUtils.h  bc7compressor.cpp  bc7compressor.h
Core/Source/Core/Components/: Camera.cpp  Camera.h  Component.cpp  Component.h  MeshRenderer.cpp  MeshRenderer.h  Transform.cpp  Transform.h
Core/Source/Core/Content/: Content.cpp  Content.h  ContentDatabase.cpp  ContentDatabase.h  ContentManager.cpp  ContentManager.h  ContentTypes.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderTexture.cpp  RenderTexture.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Core/Source/Core/Interface/: Transformable.cpp  Transformable.h
Core/Source/Core/Math/: AxisAlignedBox.cpp  Mathf.cpp  Plane.cpp  Plane.h  Ray.cpp
Core/Source/Core/Renderer/: Color.cpp  Color.h  FrameBuffer.cpp  FrameBuffer.h  Primitives.cpp  Primitives.h  Program.cpp  Program.h  Renderer.cpp  Renderer.h  RendererGL4.cpp  RendererGL4.h  TextureFormat.h  VertexBuffer.cpp  VertexBuffer.h
Core/Source/Core/Scene/: Object.cpp  Scene.cpp
Core/Source/Core/Serialization/: JsonSerialization.h
Core/Source/Core/Shared/: BitSet.cpp  IO.cpp  IO.h  List.h  Path.cpp  Path.h  String.cpp  String.h  Uuid.cpp  Uuid.h
Core/Source/Core/System/: Application.cpp  Application.h  EventHandler.cpp  EventHandler.h  InputManager.cpp  Time.cpp  Window.cpp  Window.h
Core/Source/Editor/: Editor.cpp  Editor.h  Gizmo.h
Core/Source/Interface/: Transformable.cpp  Transformable.h
Core/Source/Math/: AxisAlignedBox.cpp  AxisAlignedBox.h  Mathf.cpp  Mathf.h  Plane.h  Ray.h
Core/Source/Renderer/: Color.cpp  Color.h  FrameBuffer.h  OpenGL4.h  Primitives.cpp  Primitives.h  Program.cpp  Program.h  Renderer.cpp  Renderer.h  RendererGL4.cpp  RendererGL4.h  VertexBuffer.cpp  VertexBuffer.h
Core/Source/Scene/: CSGBrush.cpp  CSGBrush.h  CSGModel.cpp  CSGModel.h  Object.cpp  Object.h  Scene.cpp  Scene.h
Core/Source/Shared/: BitSet.h  Guid.cpp  Guid.h  Hash.h  IO.cpp  IO.h  List.cpp  List.h  Path.cpp  Path.h  String.cpp  String.h  Uuid.cpp  Uuid.h
Core/Source/System/: Application.cpp  Application.h  DeviceContext.cpp  DeviceContext.h  EventHandler.cpp  EventHandler.h  InputManager.cpp  InputManager.h  Time.cpp  Time.h  Window.cpp  Window.h  dirent.h
Editor/: Editor.aps  Editor.rc  Editor.vcxproj  Editor.vcxproj.filters  resource.h
Editor/Dependencies/bc7enc/include/: bc7enc.h
Editor/Source/: main.cpp
Editor/Source/CSG/: CSGBrush.cpp  CSGBrush.h  CSGBrushCube.cpp  CSGBrushCube.h  CSGModel.cpp  CSGModel.h
Editor/Source/Content/: ContentSerializer.cpp  ContentSerializer.h
Editor/Source/Editor/: CameraController.cpp  CameraController.h  Editor.cpp  Editor.h  Font.cpp  Font.h  Gizmo.cpp  Gizmo.h  ObjectPicker.cpp  ObjectPicker.h  Rendering.cpp  Rendering.h  Scene.cpp  Scene.h
Editor/Source/Editor/Controls/: Button.cpp  Button.h  Container.cpp  Container.h  ContentButton.cpp  ContentButton.h  ContentSelect.cpp  ContentSelect.h  ContextMenu.cpp  ContextMenu.h  Control.cpp  Control.h  ControlList.h  Dropdown.cpp  Dropdown.h  FileInput.cpp  FileInput.h  Image.cpp  Image.h  Label.cpp  Label.h  Layout.cpp  Layout.h  LinearLayout.cpp  LinearLayout.h  ListView.cpp  ListView.h  MenuBar.cpp  MenuBar.h  MenuItem.cpp  MenuItem.h  ResourceButton.cpp  ResourceButton.h  ResourceSelect.cpp  ResourceSelect.h  Separator.cpp  Separator.h  SplitPanel.cpp  SplitPanel.h  Style.h  (+8 more)
Editor/Source/Editor/Modifiers/: CSGModifier.cpp  CSGModifier.h  Modifier.cpp  Modifier.h  ModifierList.h  ModifierManager.cpp  ModifierManager.h
Editor/Source/Editor/System/: CacheManager.cpp  CacheManager.h  ContentDatabase.cpp  ContentDatabase.h  ContentLoader.cpp  ContentLoader.h
Editor/Source/Editor/Utils/: FileSystemUtils.cpp  FileSystemUtils.h  TextureUtils.cpp  TextureUtils.h
Editor/Source/Editor/Windows/: AssetsWindow.cpp  AssetsWindow.h  CSGEditWindow.cpp  CSGEditWindow.h  CSGObjectWindow.cpp  CSGObjectWindow.h  CSGWindow.cpp  CSGWindow.h  ContentImportWindow.cpp  ContentImportWindow.h  ContentWindow.cpp  ContentWindow.h  EditWindow.cpp  EditWindow.h  FullscreenWindow.cpp  FullscreenWindow.h  GizmoWindow.cpp  GizmoWindow.h  HierarchyWindow.cpp  HierarchyWindow.h  InspectorWindow.cpp  InspectorWindow.h  MainMenu.cpp  MainMenu.h  MenuWindow.cpp  MenuWindow.h  ObjectWindow.cpp  ObjectWindow.h  ProjectManagerWindow.cpp  (+10 more)
Editor/Source/Main/: Editor.cpp  Editor.h  EditorApp.cpp  EditorApp.h  EditorBase.cpp  EditorBase.h  FileSystemDialog.cpp  FileSystemDialog.h  ProjectManager.cpp  ProjectManager.h
Editor/Source/SceneUtils/: Raycast.cpp  Raycast.h
Editor/Source/Serialization/: ContentDb.cpp  ContentDb.h  JsonSerialization.h  RecentProjectList.cpp  RecentProjectList.h
Editor/Source/Shared/: Layers.h  Tags.h
Editor/Source/System/: CacheManager.h  ContentDatabase.cpp  ContentImporter.cpp  ContentImporter.h  ContentLoader.cpp  ContentLoader.h  ContentSerializer.cpp  ContentSerializer.h  ThumbCacheManager.cpp  ThumbCacheManager.h
Editor/Source/Utils/: EditorIcons.cpp  EditorIcons.h  FileSystemUtils.cpp  FileSystemUtils.h  TextureUtils.cpp  TextureUtils.h
(+37 files in other folders)
